vc-refactoring: minor improvements to the TracBrowser  * Decided that the jump to a branch or tag feature is useful anywhere    in the TracBrowser, not just from the root.  * Improve the stylesheet for displaying the revision numbers    (we need fixed character width)  * Better default size for the ''View Revision'' field    (should that be made configurable, and how?)
git-svn-id: https://svn.edgewall.org/repos/trac/branches/cboos-dev@2470 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/vc-refactoring/htdocs/css/browser.css
+++ b/vc-refactoring/htdocs/css/browser.css
@@ -26,6 +26,12 @@ h1 .sep { color: #666; padding: 0 .1em }
  color: #888;
  white-space: nowrap;
 }
+#dirlist td.rev { 
+ font-family: courier;  
+ letter-spacing: -0.02em;
+ font-size: 90%;
+ text-align: right;
+}
 #dirlist td.size {  
  color: #888;
  white-space: nowrap;
@@ -61,7 +67,12 @@ h1 .sep { color: #666; padding: 0 .1em }
 #chglist td.old_path { font-style: italic }
 #chglist td.date { font-size: 85%; vertical-align: top; padding-top: 0.55em; white-space: nowrap }
 #chglist td.author { font-size: 85%; vertical-align: top; padding-top: 0.55em }
-#chglist td.rev, #chglist td.chgset { text-align: right }
+#chglist td.rev, #chglist td.chgset { 
+ font-family: courier;  
+ letter-spacing: -0.02em;
+ font-size: 90%;
+ text-align: right; 
+}
 #chglist td.rev a, #chglist td.chgset a { border-bottom: none }
 #chglist td.summary { width: 100%; font-size: 85%; vertical-align: middle; white-space: nowrap }
 #chglist td.summary * { margin-top: 0; margin-bottom: 0 }
